# riscv32-emu

./: .gitignore  Makefile.am  README.org  configure.ac
src/: Makefile.am  main.c
src/core/: rv_constants.h  rv_core.c  rv_core.h  rv_func_hashmap.c  rv_func_hashmap.h  rv_instr.c  rv_instr.h  rv_opcode_constants.h  rv_reg_constants.h
src/dram/: dram.c  dram.h
