AC_INIT([riscvem], [1.0], [joash.n09@gmail.com]) # Mandatory. prompt=name of my binary; 1.0=my program version, my email.
AM_INIT_AUTOMAKE([foreign subdir-objects]) # tells autoconf not to complain since we don't have a AUTHORS, CHANGE_LOG and other typical project files
AC_CONFIG_SRCDIR(src/main.c)
AC_CHECK_HEADERS([stdlib.h stdint.h stdio.h string.h])
AC_CONFIG_FILES([Makefile src/Makefile])
AC_PROG_CC # This is a C program
AC_OUTPUT # Mandatory
